# jekyll-now

./: -style.scss  .#people.md  .#publications.md  .404.md.html  .Gemfile.swp  .README.md.html  .Rhistory  .Rprofile  .Ulysses-Group.plist  ._00jekyll-metadata  ._config.yml.swp  .about.md.html  .babelrc  .blog.html.swp  .buildconfig  .commitlintrc.json  .cspell.json  .csscomb.json  .dockerignore  .editorconfig  .env.iv  .env.secret  .eslintignore  .eslintrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .htaccess  .jekyll-metadata  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .project  .rubocop.yml  .ruby-version  .swm  .swn  .swo  (+1020 more)
.c9/: project.settings
.circleci/: config.yml
.cspell/: cspell.json  dictionary.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  issue_template.md  pull_request_template.md  stale.yml
.husky/: commit-msg
.jekyll-crosspost_to_medium/: medium_crossposted.yml
.nova/: Configuration.json
.scripts/: build-css.js  version.js
.vim/: coc-settings.json
.well-known/: brave-rewards-verification.txt  host-meta  microsoft-identity-association.json
2015_popmath_gymy/: index.html
2020-09-webscraping-bto/: readme.md  scraped_data.csv  webscraping-bto-info - 17 09 20.R  webscraping-bto-v2 - 16 09 20.R
2021-06-rainfall/: app-rainfall-20210615-uploaded-2021-07.R  readme.md
4things2017/: temp.txt
Data/: fidino_clients.csv  fidino_times.csv  meeting_days.csv
Essays/: test.txt
Knoedler/: index.html  (+2 more)
(+22665 files in other folders)
